aul03/ingress/tls/ingress-tls-nginx.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress1-tls-nginx
spec:
  rules:
  - host: nginx1.dexter.com.br
    http:
      paths:
      - backend:
          serviceName: nginx-service1
          servicePort: 80
        path: /
  tls:
  - hosts:
    - nginx1.dexter.com.br
    secretName: certificado1-nginx-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress2-tls-nginx
spec:
  rules:
  - host: nginx2.dexter.com.br
    http:
      paths:
      - backend:
          serviceName: nginx-service2
          servicePort: 80
        path: /
  tls:
  - hosts:
    - nginx2.dexter.com.br
    secretName: certificado2-nginx-tls
